--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit
-gspread
-google-api-python-client
-google-auth
-google-auth-oauthlib
-pandas
-openpyxl
-matplotlib
+streamlit==1.32.0
+gspread==5.12.4
+google-auth==2.23.4
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+google-api-python-client==2.108.0
+pandas==2.1.3
