--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-streamlit==1.32.0
-gspread==5.12.4
-google-auth==2.23.4
+streamlit==1.36.0
+gspread==6.0.0
+google-auth==2.29.0
 google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
-google-api-python-client==2.108.0
-pandas==2.1.3
+httplib2==0.22.0
+pandas==2.2.1
+numpy==1.26.4
+matplotlib==3.8.2
+protobuf==4.25.3
+requests==2.31.0
